Intro :after no longer gets cut off

--- a/src/sass/pages/about/_about-intro.scss
+++ b/src/sass/pages/about/_about-intro.scss
@@ -49,7 +49,7 @@
       }
 
       &:after {
-        @include summary-shutter-border(calc(100% - 2px));
+        @include summary-shutter-border(calc(100% - 6px));
       }
     }
   }
